--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="phineApp">
 
 <head>
 
@@ -8,12 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    <script src="../components/angular/angular.js"></script>
+    <script src="../components/jquery/dist/jquery.min.js"></script>
     <title>(phi)ne</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- MetisMenu CSS -->
     <link href="../components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
 
@@ -36,7 +36,6 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
 
-        <script src="../components/jquery/dist/jquery.min.js"></script>
 
         <!-- Bootstrap Core JavaScript -->
         <script src="../components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -47,7 +46,9 @@
         <!-- Morris Charts JavaScript -->
         <script src="../components/raphael/raphael-min.js"></script>
         <script src="../components/morrisjs/morris.min.js"></script>
-        <script src="../js/morris-data.js"></script>
+        <script src="js/controllers.js"></script>
+        <script src="js/app.js"></script>
+        <script src="../components/angular-route/angular-route.js"></script>
 
         <!-- Custom Theme JavaScript -->
         <script src="../dist/js/sb-admin-2.js"></script>
