--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -14,15 +14,11 @@
 	<!-- Bootstrap Core CSS -->
 	<link href="../components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
-	<!-- MetisMenu CSS -->
-	<link href="../components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
-
 	<!-- Timeline CSS -->
 	<link href="../css/timeline.css" rel="stylesheet">
 
 	<!-- Custom CSS -->
 	<link href="../css/sb-admin-2.css" rel="stylesheet">
-	<script src="../bower_components/jquery/dist/jquery.min.js"></script>
 	<!-- Custom Fonts -->
 	<link href="../components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
@@ -34,10 +30,7 @@
         <![endif]-->
 
         <!-- Bootstrap Core JavaScript -->
-        <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-
-        <!-- Metis Menu Plugin JavaScript -->
-        <script src="../bower_components/metisMenu/dist/metisMenu.min.js"></script>
+        <script src="../components/bootstrap/dist/js/bootstrap.min.js"></script>
 
         <!-- Custom Theme JavaScript -->
         <script src="../dist/js/sb-admin-2.js"></script>
@@ -61,21 +54,22 @@
 
 
     			<div class="navbar-default sidebar" role="navigation">
-    				<div class="sidebar-nav navbar-collapse">
+    			<div class="sidebar-nav navbar-collapse">
     					<ul class="nav" id="side-menu">
     						<li>
-    							<a href="dashboard.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+    							<a ng-href="#/dashboard"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
     						</li>
     						<li> 
-    							<a href='friendList.html'><i class="fa fa-friendList fa-fw"></i> Friends</a>
+    							<a ng-href='#/friendList'><i class="fa fa-friendList fa-fw"></i> Friends</a>
     						</li>
     						<li>
-    							<a href="newTransaction.html"><i class="fa fa-addTransition fa-fw"></i> Add Transaction</a>
+    							<a ng-href="#/newTransaction"><i class="fa fa-addTransition fa-fw"></i> Add Transaction</a>
     						</li>
     						<li>
-    							<a href="transactions.html"><i class-"fa fa-transactions fa-fw"></i> View Transactions</a>
+    							<a ng-href="#/transactions"><i class-"fa fa-transactions fa-fw"></i> View Transactions</a>
+    							</li>
     							<li>
-    								<a href="account.html"><i class="fa fa-account fa-fw"></i> My Account</a>
+    								<a ng-href="#/account"><i class="fa fa-account fa-fw"></i> My Account</a>
     							</li>
     						</ul>
     					</div>
@@ -86,7 +80,7 @@
     			<div id="page-wrapper">
     				<div class="row">
     					<div class="col-lg-12">
-    						<h1 class="page-header">Dashboard</h1>
+    						<h1 class="page-header">Hello {{first_name}} {{last_name}}</h1>
     					</div>
     					<!-- /.col-lg-12 -->
     				</div>
