--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -49,7 +49,7 @@
     					<span class="icon-bar"></span>
     					<span class="icon-bar"></span>
     				</button>
-    				<a class="navbar-brand" href="index.html">(phi)ne</a>
+    				<a class="navbar-brand" ng-href="#/">(phi)ne</a>
     			</div>
 
 
@@ -93,54 +93,54 @@
     						<!-- /.panel-heading -->
     						<div class="panel-body">
     							<div class="list-group" >
-    								<a href="#" class="list-group-item">
+    								<a href="#/" class="list-group-item">
     									<i class="fa fa-comment fa-fw"></i> New Comment
     									<span class="pull-right text-muted small"><em>4 minutes ago</em>
     									</span>
     								</a>
-    								<a href="#" class="list-group-item">
+    								<a href="#/" class="list-group-item">
     									<i class="fa fa-twitter fa-fw"></i> 3 New Followers
     									<span class="pull-right text-muted small"><em>12 minutes ago</em>
     									</span>
     								</a>
-    								<a href="#" class="list-group-item">
+    								<a href="#/" class="list-group-item">
     									<i class="fa fa-envelope fa-fw"></i> Message Sent
     									<span class="pull-right text-muted small"><em>27 minutes ago</em>
     									</span>
     								</a>
-    								<a href="#" class="list-group-item">
+    								<a href="#/" class="list-group-item">
     									<i class="fa fa-tasks fa-fw"></i> New Task
     									<span class="pull-right text-muted small"><em>43 minutes ago</em>
     									</span>
     								</a>
-    								<a href="#" class="list-group-item">
+    								<a href="#/" class="list-group-item">
     									<i class="fa fa-upload fa-fw"></i> Server Rebooted
     									<span class="pull-right text-muted small"><em>11:32 AM</em>
     									</span>
     								</a>
-    								<a href="#" class="list-group-item">
+    								<a href="#/" class="list-group-item">
     									<i class="fa fa-bolt fa-fw"></i> Server Crashed!
     									<span class="pull-right text-muted small"><em>11:13 AM</em>
     									</span>
     								</a>
-    								<a href="#" class="list-group-item">
+    								<a href="#/" class="list-group-item">
     									<i class="fa fa-warning fa-fw"></i> Server Not Responding
     									<span class="pull-right text-muted small"><em>10:57 AM</em>
     									</span>
     								</a>
-    								<a href="#" class="list-group-item">
+    								<a href="#/" class="list-group-item">
     									<i class="fa fa-shopping-cart fa-fw"></i> New Order Placed
     									<span class="pull-right text-muted small"><em>9:49 AM</em>
     									</span>
     								</a>
-    								<a href="#" class="list-group-item">
+    								<a href="#/" class="list-group-item">
     									<i class="fa fa-money fa-fw"></i> Payment Received
     									<span class="pull-right text-muted small"><em>Yesterday</em>
     									</span>
     								</a>
     							</div>
     							<!-- /.list-group -->
-    							<a href="#" class="btn btn-default btn-block">View All Alerts</a>
+    							<a href="#/" class="btn btn-default btn-block">View All Alerts</a>
     						</div>
     						<!-- /.panel-body -->
     					</div>
@@ -151,7 +151,7 @@
     						</div>
     						<div class="panel-body">
     							<div id="morris-donut-chart"></div>
-    							<a href="#" class="btn btn-default btn-block">View Details</a>
+    							<a href="#/" class="btn btn-default btn-block">View Details</a>
     						</div>
     						<!-- /.panel-body -->
     					</div>
