--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -3,220 +3,219 @@
 
 <head>
 
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="">
-	<meta name="author" content="">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-	<title>(phi)ne</title>
+    <title>(phi)ne</title>
 
-	<!-- Bootstrap Core CSS -->
-	<link href="../components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap Core CSS -->
+    <link href="../components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
-	<!-- Timeline CSS -->
-	<link href="../css/timeline.css" rel="stylesheet">
+    <!-- Timeline CSS -->
+    <link href="../css/timeline.css" rel="stylesheet">
 
-	<!-- Custom CSS -->
-	<link href="../css/sb-admin-2.css" rel="stylesheet">
-	<!-- Custom Fonts -->
-	<link href="../components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <!-- Custom CSS -->
+    <link href="../css/sb-admin-2.css" rel="stylesheet">
+    <!-- Custom Fonts -->
+    <link href="../components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
 
-        <!-- Bootstrap Core JavaScript -->
-        <script src="../components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="../components/bootstrap/dist/js/bootstrap.min.js"></script>
 
-        <!-- Custom Theme JavaScript -->
-        <script src="../dist/js/sb-admin-2.js"></script>
-    </head>
+    <!-- Custom Theme JavaScript -->
+    <script src="../dist/js/sb-admin-2.js"></script>
+</head>
 
-    <body>
+<body>
 
-    	<div id="wrapper">
+    <div id="wrapper">
 
-    		<!-- Navigation -->
-    		<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
-    			<div class="navbar-header">
-    				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-    					<span class="sr-only">Toggle navigation</span>
-    					<span class="icon-bar"></span>
-    					<span class="icon-bar"></span>
-    					<span class="icon-bar"></span>
-    				</button>
-    				<a class="navbar-brand" ng-href="#/">(phi)ne</a>
-    			</div>
+        <!-- Navigation -->
+        <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" ng-href="#/">(phi)ne</a>
+            </div>
 
 
-    			<div class="navbar-default sidebar" role="navigation">
-    			<div class="sidebar-nav navbar-collapse">
-    					<ul class="nav" id="side-menu">
-    						<li>
-    							<a ng-href="#/dashboard"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
-    						</li>
-    						<li> 
-    							<a ng-href='#/friendList'><i class="fa fa-friendList fa-fw"></i> Friends</a>
-    						</li>
-    						<li>
-    							<a ng-href="#/newTransaction"><i class="fa fa-addTransition fa-fw"></i> Add Transaction</a>
-    						</li>
-    						<li>
-    							<a ng-href="#/transactions"><i class-"fa fa-transactions fa-fw"></i> View Transactions</a>
-    							</li>
-    							<li>
-    								<a ng-href="#/account"><i class="fa fa-account fa-fw"></i> My Account</a>
-    							</li>
-    						</ul>
-    					</div>
-    					<!-- /.sidebar-collapse -->
-    				</div>
-    				<!-- /.navbar-static-side -->
-    			</nav>
-    			<div id="page-wrapper">
-    				<div class="row">
-    					<div class="col-lg-12">
-    						<h1 class="page-header">Hello {{first_name}} {{last_name}}</h1>
-    					</div>
-    					<!-- /.col-lg-12 -->
-    				</div>
-    				<!-- /.col-lg-8 -->
-    				<div class="col-lg-6">
-    					<div class="panel panel-default">
-    						<div class="panel-heading">
-    							<i class="fa fa-bell fa-fw"></i> Recent Transactions
-    						</div>
-    						<!-- /.panel-heading -->
-    						<div class="panel-body">
-    							<div class="list-group" >
-    								<a href="#/" class="list-group-item">
-    									<i class="fa fa-comment fa-fw"></i> New Comment
-    									<span class="pull-right text-muted small"><em>4 minutes ago</em>
-    									</span>
-    								</a>
-    								<a href="#/" class="list-group-item">
-    									<i class="fa fa-twitter fa-fw"></i> 3 New Followers
-    									<span class="pull-right text-muted small"><em>12 minutes ago</em>
-    									</span>
-    								</a>
-    								<a href="#/" class="list-group-item">
-    									<i class="fa fa-envelope fa-fw"></i> Message Sent
-    									<span class="pull-right text-muted small"><em>27 minutes ago</em>
-    									</span>
-    								</a>
-    								<a href="#/" class="list-group-item">
-    									<i class="fa fa-tasks fa-fw"></i> New Task
-    									<span class="pull-right text-muted small"><em>43 minutes ago</em>
-    									</span>
-    								</a>
-    								<a href="#/" class="list-group-item">
-    									<i class="fa fa-upload fa-fw"></i> Server Rebooted
-    									<span class="pull-right text-muted small"><em>11:32 AM</em>
-    									</span>
-    								</a>
-    								<a href="#/" class="list-group-item">
-    									<i class="fa fa-bolt fa-fw"></i> Server Crashed!
-    									<span class="pull-right text-muted small"><em>11:13 AM</em>
-    									</span>
-    								</a>
-    								<a href="#/" class="list-group-item">
-    									<i class="fa fa-warning fa-fw"></i> Server Not Responding
-    									<span class="pull-right text-muted small"><em>10:57 AM</em>
-    									</span>
-    								</a>
-    								<a href="#/" class="list-group-item">
-    									<i class="fa fa-shopping-cart fa-fw"></i> New Order Placed
-    									<span class="pull-right text-muted small"><em>9:49 AM</em>
-    									</span>
-    								</a>
-    								<a href="#/" class="list-group-item">
-    									<i class="fa fa-money fa-fw"></i> Payment Received
-    									<span class="pull-right text-muted small"><em>Yesterday</em>
-    									</span>
-    								</a>
-    							</div>
-    							<!-- /.list-group -->
-    							<a href="#/" class="btn btn-default btn-block">View All Alerts</a>
-    						</div>
-    						<!-- /.panel-body -->
-    					</div>
-    					<!-- /.panel -->
-    					<div class="panel panel-default">
-    						<div class="panel-heading">
-    							<i class="fa fa-bar-chart-o fa-fw"></i> Donut Chart Example
-    						</div>
-    						<div class="panel-body">
-    							<div id="morris-donut-chart"></div>
-    							<a href="#/" class="btn btn-default btn-block">View Details</a>
-    						</div>
-    						<!-- /.panel-body -->
-    					</div>
-    					<!-- /.panel -->
-    					<div class="chat-panel panel panel-default">
-    						<div class="panel-heading">
-    							<i class="fa fa-comments fa-fw"></i>
-    							Chat
-    							<div class="btn-group pull-right">
-    								<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-    									<i class="fa fa-chevron-down"></i>
-    								</button>
-    								<ul class="dropdown-menu slidedown">
-    									<li>
-    										<a href="#">
-    											<i class="fa fa-refresh fa-fw"></i> Refresh
-    										</a>
-    									</li>
-    									<li>
-    										<a href="#">
-    											<i class="fa fa-check-circle fa-fw"></i> Available
-    										</a>
-    									</li>
-    									<li>
-    										<a href="#">
-    											<i class="fa fa-times fa-fw"></i> Busy
-    										</a>
-    									</li>
-    									<li>
-    										<a href="#">
-    											<i class="fa fa-clock-o fa-fw"></i> Away
-    										</a>
-    									</li>
-    									<li class="divider"></li>
-    									<li>
-    										<a href="#">
-    											<i class="fa fa-sign-out fa-fw"></i> Sign Out
-    										</a>
-    									</li>
-    								</ul>
-    							</div>
-    						</div>
-    						<!-- /.panel-body -->
-    						<div class="panel-footer">
-    							<div class="input-group">
-    								<input id="btn-input" type="text" class="form-control input-sm" placeholder="Type your message here..." />
-    								<span class="input-group-btn">
-    									<button class="btn btn-warning btn-sm" id="btn-chat">
-    										Send
-    									</button>
-    								</span>
-    							</div>
-    						</div>
-    						<!-- /.panel-footer -->
-    					</div>
-    					<!-- /.panel .chat-panel -->
-    				</div>
-    				<!-- /.col-lg-4 -->
-    			</div>
-    			<!-- /.row -->
-    		</div>
-    		<!-- /#page-wrapper -->
+            <div class="navbar-default sidebar" role="navigation">
+                <div class="sidebar-nav navbar-collapse">
+                    <ul class="nav" id="side-menu">
+                        <li>
+                            <a ng-href="#/dashboard"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                        </li>
+                        <li>
+                            <a ng-href='#/friendList'><i class="fa fa-users fa-fw"></i> Friends</a>
+                        </li>
+                        <li>
+                            <a ng-href="#/newTransaction"><i class="fa fa-money fa-fw"></i> Add Transaction</a>
+                        </li>
+                        <li>
+                            <a ng-href="#/transactions"><i class="fa fa-list-alt fa-fw"></i> View Transactions</a>
+                        </li>
+                        <li>
+                            <a ng-href="#/account"><i class="fa fa-user fa-fw"></i> My Account</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- /.sidebar-collapse -->
+            </div>
+            <!-- /.navbar-static-side -->
+        </nav>
+        <div id="page-wrapper">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header">Hello {{first_name}} {{last_name}}</h1>
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
+            <!-- /.col-lg-8 -->
+            <div class="col-lg-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <i class="fa fa-bell fa-fw"></i> Recent Transactions
+                    </div>
+                    <!-- /.panel-heading -->
+                    <div class="panel-body">
+                        <div class="list-group">
+                            <a href="#/" class="list-group-item">
+                                <i class="fa fa-comment fa-fw"></i> New Comment
+                                <span class="pull-right text-muted small"><em>4 minutes ago</em>
+                                        </span>
+                            </a>
+                            <a href="#/" class="list-group-item">
+                                <i class="fa fa-twitter fa-fw"></i> 3 New Followers
+                                <span class="pull-right text-muted small"><em>12 minutes ago</em>
+                                        </span>
+                            </a>
+                            <a href="#/" class="list-group-item">
+                                <i class="fa fa-envelope fa-fw"></i> Message Sent
+                                <span class="pull-right text-muted small"><em>27 minutes ago</em>
+                                        </span>
+                            </a>
+                            <a href="#/" class="list-group-item">
+                                <i class="fa fa-tasks fa-fw"></i> New Task
+                                <span class="pull-right text-muted small"><em>43 minutes ago</em>
+                                        </span>
+                            </a>
+                            <a href="#/" class="list-group-item">
+                                <i class="fa fa-upload fa-fw"></i> Server Rebooted
+                                <span class="pull-right text-muted small"><em>11:32 AM</em>
+                                        </span>
+                            </a>
+                            <a href="#/" class="list-group-item">
+                                <i class="fa fa-bolt fa-fw"></i> Server Crashed!
+                                <span class="pull-right text-muted small"><em>11:13 AM</em>
+                                        </span>
+                            </a>
+                            <a href="#/" class="list-group-item">
+                                <i class="fa fa-warning fa-fw"></i> Server Not Responding
+                                <span class="pull-right text-muted small"><em>10:57 AM</em>
+                                        </span>
+                            </a>
+                            <a href="#/" class="list-group-item">
+                                <i class="fa fa-shopping-cart fa-fw"></i> New Order Placed
+                                <span class="pull-right text-muted small"><em>9:49 AM</em>
+                                        </span>
+                            </a>
+                            <a href="#/" class="list-group-item">
+                                <i class="fa fa-money fa-fw"></i> Payment Received
+                                <span class="pull-right text-muted small"><em>Yesterday</em>
+                                        </span>
+                            </a>
+                        </div>
+                        <!-- /.list-group -->
+                        <a href="#/" class="btn btn-default btn-block">View All Alerts</a>
+                    </div>
+                    <!-- /.panel-body -->
+                </div>
+                <!-- /.panel -->
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <i class="fa fa-bar-chart-o fa-fw"></i> Donut Chart Example
+                    </div>
+                    <div class="panel-body">
+                        <div id="morris-donut-chart"></div>
+                        <a href="#/" class="btn btn-default btn-block">View Details</a>
+                    </div>
+                    <!-- /.panel-body -->
+                </div>
+                <!-- /.panel -->
+                <div class="chat-panel panel panel-default">
+                    <div class="panel-heading">
+                        <i class="fa fa-comments fa-fw"></i> Chat
+                        <div class="btn-group pull-right">
+                            <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
+                                <i class="fa fa-chevron-down"></i>
+                            </button>
+                            <ul class="dropdown-menu slidedown">
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-refresh fa-fw"></i> Refresh
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-check-circle fa-fw"></i> Available
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-times fa-fw"></i> Busy
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-clock-o fa-fw"></i> Away
+                                    </a>
+                                </li>
+                                <li class="divider"></li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-sign-out fa-fw"></i> Sign Out
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- /.panel-body -->
+                    <div class="panel-footer">
+                        <div class="input-group">
+                            <input id="btn-input" type="text" class="form-control input-sm" placeholder="Type your message here..." />
+                            <span class="input-group-btn">
+                                        <button class="btn btn-warning btn-sm" id="btn-chat">
+                                            Send
+                                        </button>
+                                    </span>
+                        </div>
+                    </div>
+                    <!-- /.panel-footer -->
+                </div>
+                <!-- /.panel .chat-panel -->
+            </div>
+            <!-- /.col-lg-4 -->
+        </div>
+        <!-- /.row -->
+    </div>
+    <!-- /#page-wrapper -->
 
-    	</div>
+    </div>
 
-    </body>
+</body>
 
-    </html>
+</html>
